Closed Bug 444319 Opened 16 years ago Closed 16 years ago

toolkit --help lists non-working -height and -width options, but they don't work in most apps

Categories

(Toolkit :: Startup and Profile System, defect)

All
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.1a2

People

(Reporter: rees, Assigned: mkmelin)

References

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9) Gecko/2008061015 Firefox/3.0 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9) Gecko/2008061015 Firefox/3.0 "firefox --help" lists the "height" and "width" command line options, which haven't worked in a decade and seem unlikely to work in the future (see bug #20573). These options should be removed. Reproducible: Always Steps to Reproduce: 1.Run "firefox --help" Actual Results: "height" and "width" command line options are listed Expected Results: These options should not be listed, and if given should be rejected
Attached patch proposed fixSplinter Review
Don't list -height and -width options in the help since they aren't working anyway.
Assignee: nobody → mkmelin+mozilla
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #329327 - Flags: review?(gavin.sharp)
Why don't they work? Is there a bug filed (bug 20573 is unrelated as far as I can tell)? Looking at http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/browser/components/nsBrowserContentHandler.js&rev=1.49&mark=626-632#621 I don't see offhand why they wouldn't.
I don't know why it doesn't work, but it doesn't and seeing the age of bug 50201 apparently haven't at least since 2000. I just retested it both in gnome and kde, they have no effect whatsoever. In thunderbird i get "Warning: unrecognized command line flag -height".
Comment on attachment 329327 [details] [diff] [review] proposed fix OK. I guess these should be handled in app-specific handlers anyways (and therefore added to their nsICommandLineHandler's helpInfo once they work there). Can you file bugs on Firefox and Thunderbird on fixing these? Bug 50201 should probably be turned into a SeaMonkey bug.
Attachment #329327 - Flags: review?(gavin.sharp) → review+
Component: General → XRE Startup
Flags: in-testsuite-
Product: Firefox → Toolkit
QA Contact: general → xre.startup
Summary: firefox --help lists non-working -height and -width options → toolkit --help lists non-working -height and -width options, but they don't work in most apps
Component: XRE Startup → Startup and Profile System
QA Contact: xre.startup → startup
Created follow-up bugs bug 450852 and bug 450853.
Magnus: so this is ready to land, right?
Yes, i've just be been away/busy. +no good tree when i'd have had the time to land it.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1a2
Removed the options from the dev pages. This was the earlier version: http://developer.mozilla.org/index.php?title=En/Command_Line_Options&revision=20
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: