Bug 444319 - toolkit --help lists non-working -height and -width options, but they don't work in most apps. r=gavin.sharp