toolkit/xre/nsAppRunner.cpp
@@ -1165,9 +1165,7 @@ DumpHelp()
          "\nMozilla options\n");
 #endif
 
-  printf("\t-height <value>\t\tSet height of startup window to <value>.\n"
-         "\t-h or -help\t\tPrint this message.\n"
-         "\t-width <value>\t\tSet width of startup window to <value>.\n"
+  printf("\t-h or -help\t\tPrint this message.\n"
          "\t-v or -version\t\tPrint %s version.\n"
          "\t-P <profile>\t\tStart with <profile>.\n"
          "\t-ProfileManager\t\tStart with ProfileManager.\n"
